add form agreement

--- a/music/main/static/main/css/personal.css
+++ b/music/main/static/main/css/personal.css
@@ -752,6 +752,69 @@
     color: var(--color-second);
 }
 
+.form-agreement {
+    margin-bottom: 20px;
+    overflow-y: auto;
+    max-height: 600px;
+    height: 100%;
+}
+.modal__form--title {
+    font-size: 28px;
+}
+
+.modal__form--subtitle {
+    font-size: 18px;
+}
+
+.modal__form--box {
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: #2a2b38;   
+    border-radius: 6px;    
+}
+
+.modal__form--box input[type='date'] {
+    padding: 13px 20px;    
+    position: relative;
+    height: 48px;
+    width: 100%;
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+    outline: none;
+    color: var(--color-gray);
+    background-color: var(--color-bg);
+    border: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.modal__form--box input[type='date']::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    z-index: 3;
+    transform: translateY(-50%);
+    pointer-events: none;
+    background-image: url(../img/icons/icon_calendar.svg);;
+    width: 20px;
+    height: 20px;
+}
+
+.modal__form--row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 /*Event*/
 .newEvent {
     display: flex;
@@ -1731,16 +1794,18 @@ input[type='date']::after {
     right: 10px;    
 }
 
-.payment__link {
+.payment__btn {
     padding: 10px 20px;
     border: 1px solid var(--color-blue);
     border-radius: 10px; 
     outline: none;
-    transition: color 0.3s ease-in-out;
+    color: var(--color-white);
+    transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
 }
 
-.payment__link:hover {
+.payment__btn:hover {
     color: var(--color-second);
+    border-color: var(--color-second);
 }
 
 .additionally {
