--- a/music/personal/templates/personal/modalLogin.html
+++ b/music/personal/templates/personal/modalLogin.html
@@ -2,7 +2,7 @@
 
  <div class="modal" id="modal">
     <div class="modal__body">
-        <button class="btn modal__close" id="modalClose">
+        <button class="btn modal__close" data-modal="login">
             <span class="modal__close--line"></span>
             <span class="modal__close--line"></span>
         </button>
