--- a/music/personal/templates/personal/personal.html
+++ b/music/personal/templates/personal/personal.html
@@ -45,6 +45,7 @@
             </div>
         </main>
        {% include 'personal/modalLogin.html' %}
+        {% include 'personal/modalAgreement.html' %}
     </div>
     <script src="{% static 'main/libs/choices.min.js' %}"></script>
     <script src="{% static 'main/libs/swiper-bundle.min.js' %}"></script>
