--- a/music/personal/templates/personal/stepPayment.html
+++ b/music/personal/templates/personal/stepPayment.html
@@ -19,8 +19,8 @@
     </div>
     <div class="payment__result">
         <span class="payment__text">К оплате 1000 </span>
-        <a class="payment__link">
-            Подписать договор</a>
+        <button class="payment__btn btn" id="agreement">
+            Подписать договор</button>
         <button class="btn header__link link step__btn" data-step="7">
             <span class="link__line link__line--top"></span>
             <span class="link__line link__line--right"></span>
