--- a/music/personal/templates/personal/stepOne.html
+++ b/music/personal/templates/personal/stepOne.html
@@ -3,13 +3,13 @@
 <div class="step-one step__section" data-step="1">
     <h2 class="download__title">Что загружаем ?</h2>
     <div class="download__buttons">
-        <button class="btn step__btn download__btn" data-name="singl" data-step="2">
+        <button class="btn step__btn download__btn" data-name="single" data-step="2">
             <svg class="download__btn-icon">
                 <use xlink:href="#singl"></use>
             </svg>
             <span class="download__btn--text">Сингл</span>
         </button>
-        <button class="btn step__btn download__btn" data-name="album" disabled>
+        <button class="btn step__btn download__btn" data-name="album" data-step="2" >
             <svg class="download__btn-icon">
                 <use xlink:href="#album"></use>
             </svg>
