--- a/music/main/static/main/css/personal.css
+++ b/music/main/static/main/css/personal.css
@@ -1372,6 +1372,7 @@
 
 /*Step1*/
 .step-one, .step-two, .step-three, .step-four, .step-five, .step-payment {
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -1381,6 +1382,21 @@
 }
 
 .section-hidden {
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+}
+
+.step__section--box {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.step__section--box.hidden {
     opacity: 0;
     visibility: hidden;
     display: none;
@@ -1402,12 +1418,31 @@
     margin-bottom: 25px;
 }
 
+.add-track__btn {
+    padding: 10px 20px;
+    border: 1px solid var(--color-blue);
+    border-radius: 10px; 
+    outline: none;
+    color: var(--color-white);
+    transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
+}
+
+.add-track__btn:hover {
+    color: var(--color-second);
+    border-color: var(--color-second);
+}
 /*Single*/
 .form-step {
     padding: 20px;
     width: 100%;
     border-radius: 20px;
     border: 1px solid rgba(83, 95, 246, 0.4);
+}
+
+.form-step__inner--box {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
 }
 
 .form-step__box {
@@ -1516,14 +1551,23 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 30px 20px;
     width: 100%;
+    opacity: 1;
+    visibility: visible;
+}
+
+.form-step__wrapper.hidden {
+    opacity: 0;
+    visibility: hidden;
+    display: none;
 }
 
 .form-step__label {
     position: relative;
     display: flex;
     gap: 10px;
-    opacity: 0.6;
+    opacity: 0.8;
     font-size: 18px;
+    font-weight: bold;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -1548,8 +1592,8 @@
 
 .form-step__input::placeholder {
     color: var(--color-white);
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 18px;    
+    opacity: 0.6;
 }
 
 input[type='date'] {
@@ -1730,6 +1774,10 @@ input[type='date']::after {
 
 .payment__name {
     font-size: 24px;
+}
+
+.payment__name--autor {
+    font-size: 18px;
 }
 
 .promo__form {
